# aops-python

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
aops/: __init__.py  _cache.py  _client.py  _config.py  _decorators.py  _exceptions.py  _keys.py  _models.py  _pull.py  _run.py  openai.py
aops/langchain/: __init__.py  _loader.py  callback.py
docs/: api.md  configuration.md  langchain.md  live-updates.md  quickstart.md  tracing.md
docs/integrations/: decorator.md  langchain.md  openai.md
examples/: anthropic_example.py  langchain_example.py  live_updates.py  openai_example.py
